# ame-translator-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  plan.md  pyproject.toml
bot/: builder.py  handlers.py  main.py  models.py  parser.py  pipeline.py  translator.py  utils.py
tests/: conftest.py  test_builder.py  test_parser.py  test_translator.py
tests/samples/: Quiz_no_01_Date_1_8_2025_Topic_Sushruta_brief_notes_1_8_सघरष.docx  Quiz_no_01_Date_1_8_2025_Topic_Sushruta_brief_notes_1_8_सघरष.xlsx
